Adding 'Admin' User

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,13 @@
+/**
+ * @Author: John Carlo M. Ramos
+ * @Date:   2019-11-06T10:00:00+00:00
+ * @Email:  !!!!!---CTRL + ALT + C = Colour Picker---!!!!!
+ * @Last modified by:   John Carlo M. Ramos
+ * @Last modified time: 2019-11-06T15:26:57+00:00
+ */
+
+
+
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
 /*!
@@ -11099,4 +11109,3 @@ a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
-
